agrego seccion de Bienvenidos y de quienes somos, agrego nueva imagen en la carpeta img

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="favicon/x-iocn" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="./css/style.css">
     <title>Conceptotec</title>
 </head>
@@ -14,20 +15,53 @@
         <nav id="menu">
             <img src="./assets/img/logotipo.png" alt="logo de la empresa">
             <ul>
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#">NOSOTROS</a></li>
-                <li><a href="#">SERVICIO</a></li>
-                <li><a href="#">PRODUCTOS</a></li>
-                <li><a href="#">SOCIOS</a></li>
-                <li><a href="#">CONTACTO</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="#nosotros">NOSOTROS</a></li>
+                <li><a href="#servicio">SERVICIO</a></li>
+                <li><a href="#productos">PRODUCTOS</a></li>
+                <li><a href="#socios">SOCIOS</a></li>
+                <li><a href="#contacto">CONTACTO</a></li>
             </ul>
         </nav>
-    </div>
-      </header>
-    
+    </header>
+
     <main>
-        
-    </main> 
+        <section>
+            <h1>Bienvenidos a ConceptoTec</h1>
+        </section>
+
+        <section>
+            <h2>Quienes somos</h2>
+            <div>
+                <div>
+                    <img src="./assets/img/servicio_tecnicoi.webp" alt="imagen sercicio tecnico">
+                </div>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dignissimos eveniet sint quisquam
+                        veniam in inventore explicabo cumque optio minima nam temporibus necessitatibus, tempora maxime
+                        possimus nihil officia esse dolor.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore qui repellendus magnam iusto
+                        autem quos assumenda quas, facilis ad suscipit praesentium quae laboriosam, maiores at? In
+                        praesentium atque nemo dolorem!
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis illum dolore molestiae
+                        inventore expedita dolores officiis nobis quasi iure provident, soluta quis quas culpa? Nemo
+                        ullam nisi explicabo beatae amet?
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <p>
+                Nuestras especialidades
+            </p>
+        </section>
+    </main>
 
 
 
@@ -37,7 +71,7 @@
 
 
 
- 
+
 </body>
 
 </html>
