--- a/index.html
+++ b/index.html
@@ -61,6 +61,61 @@
                 Nuestras especialidades
             </p>
         </section>
+        <section>
+            <div>
+                <div class="card">
+                    <div class="face front">
+                        <img src="./assets/img/tuerca.jpg" alt="icono de tuerca">
+                        <h3>Servicio tecnico</h3>
+                    </div>
+                    <div class="face back">
+                        <h3>Servicio</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis libero, labore rerum quisquam
+                            fugit similique maxime officiis! Nisi, voluptatem praesentium. Ducimus soluta magni amet dicta.
+                            <div class="link">
+                                <a href="#">Detalles</a>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            
+                <div class="card">
+                    <div class="face front">
+                        <img src="./assets/img/camara.jpg" alt="españa">
+                        <h3>Seguridad</h3>
+                    </div>
+                    <div class="face back">
+                        <h3>Servicio</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis libero, labore rerum quisquam
+                            fugit similique maxime officiis! Nisi, voluptatem praesentium. Ducimus soluta magni amet dicta.
+                            <div class="link">
+                                <a href="#">Detalles</a>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            
+                <div class="card">
+                    <div class="face front">
+                        <img src="./assets/img/impresion_3D.png" alt="peru">
+                        <h3>Impresión 3D</h3>
+                    </div>
+                    <div class="face back">
+                        <h3>Servicio</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis libero, labore rerum quisquam
+                            fugit similique maxime officiis! Nisi, voluptatem praesentium. Ducimus soluta magni amet dicta.
+                            <div class="link">
+                                <a href="#">Detalles</a>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
