Elimino el archivo packege.json

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                         <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Dejanos tu consulta"></textarea>
                     </div>
 
+                    <input type="submit" value="Enviar">
                 </form>
             </div>
         </section>
