modifico textos de tarjetas de productos, finalizo el formularioy comienzo con el footer

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                     <div class="project-info">
                         <a href="#">Kaspersky</a>
-                        <p>Precio 126.540 COL</p>
+                        <p>Precio 126.540</p>
                     </div>
                 </article>
 
@@ -179,7 +179,7 @@
                         <img src="./assets/img/teclado_mecanico.webp">
                     </div>
                     <div class="project-info">
-                        <a href="#">Teclado Gamer Redragon K630</a>
+                        <a href="#">Teclado Redragon K630</a>
                         <p>Precio: 172.250</p>
                     </div>
                 </article>
@@ -245,19 +245,15 @@
 
     </main>
 
-    <!-- <footer>
-        <div>
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#"></a>
-        </div>
-        <div>
-            <small>&copy; Derechos Resevados Ivan Gómez</small>
-        </div>
+    <footer>
+        <section class="footer">
+            <div class="contenedor">
+                <div class="logo">
+                    <h2>Ivan Gómez</h2>
+                </div>
+            </div>
+        </section>
     </footer>
- -->
-
-
 
 </body>
 
