termino el footer y agrego imagenes en la carpeta img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav id="menu">
             <div class="concepto">
-                <p>CONCEPTOTEC</p>
+                <img src="./assets/img/logotipo.png">
                 <ul>
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="#nosotros">NOSOTROS</a></li>
@@ -57,7 +57,7 @@
             <div class="container1">
                 <div class="card">
                     <div class="face front">
-                        <img src="./assets/img/tuerca.jpg" alt="icono de tuerca">
+                        <img src="./assets/img/tuerca-removebg-preview.webp" alt="icono de tuerca">
                         <h3>Servicio tecnico</h3>
                     </div>
                     <div class="face back">
@@ -249,7 +249,15 @@
         <section class="footer">
             <div class="contenedor">
                 <div class="logo">
-                    <h2>Ivan Gómez</h2>
+                    <img src="./assets/img/logotipo.png">
+                </div>
+
+                <div class="matricula">
+                    <h3>Todos los derechos reservados</h3>
+                </div>
+
+                <div class="informacion">
+                    <img src="./assets/img/redes_sociales-removebg-preview.png">
                 </div>
             </div>
         </section>
