se agregan los @media a la pagina

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Accesorios gamer, impresión 3D, Camaras de seguridad">
     <link rel="icon" type="favicon/x-iocn" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="./css/style.css">
     <title>Conceptotec</title>
@@ -209,7 +210,7 @@
                         <img src="./assets/img/disco_solido.webp">
                     </div>
                     <div class="project-info">
-                        <a href="#">Disco SSD Kingston 480GB</a>
+                        <a href="#">SSD Kingston 480GB</a>
                         <p>Precio: 167.000</p>
                     </div>
                 </article>
